<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activity.register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/text_name"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/nome" />
    <EditText
        android:id="@+id/text_surname"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/apelido" />
    <EditText
        android:id="@+id/text_email"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textWebEmailAddress"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/text_cpf"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/cpf" />
    <EditText
        android:id="@+id/text_telephone"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="phone"
        android:hint="@string/telephone" />
    <EditText
        android:id="@+id/text_register_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/registe_date"
        android:focusable="false"
        android:clickable="true"/>
    <Button
        android:id="@+id/button_register_user"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/buttonRegister" />

    <Button
        android:id="@+id/button_register_return"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register_return" />


</LinearLayout>