<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activity.register.RegisterLoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_launcher_background" />


    <EditText
        android:id="@+id/text_login"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/text_password"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/text_repeat_password"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/repeatpassword" />

    <Button
        android:id="@+id/button_register_user_next"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/buttonRegister" />

    <Button
        android:id="@+id/button_register_return_next"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register_return" />

</LinearLayout>