<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    tools:context=".activity.main.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/login_editextUser"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/login_editextPassword"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:hint="@string/senha"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar_dados" />


    <Button
        android:id="@+id/login_Button_Conectar"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/conectar" />

    <Button
        android:id="@+id/login_Button_Cadastrar"
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar" />
</LinearLayout>