<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activity.pet.CompletePetRegistration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"

        android:padding="16dp">

        <ImageView
            android:id="@+id/image_selected"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/imagem_selecionada" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/select_imagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecionar_imagem" />
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/register_pet_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar" />

</LinearLayout>